# nr22-software

./: .gitignore  .gitmodules  README.md  init_env.sh
avoid_obstacles/: lazytheta.py  test.py  test2.py  testgate.py
colordetection/: main.py
init/: catkin.sh  miniconda.sh  ros_gazebo.sh  utils.sh
init/include/: ardupilot.sh  depthai_orbslam_opencv.sh  orbslam_opencv.sh
init/src/: faux_detection.sh
src/avoid_obstacles/: CMakeLists.txt  cli_tricks  git_tricks  package.xml
src/avoid_obstacles/rviz/: view_label.rviz  view_label_pose.rviz  view_pcl.rviz  view_trajectory.rviz
src/avoid_obstacles/scripts/: lazytheta.cpp  lazytheta.py  lazytheta_py2.py  pathplanner.py  pathplanner_pointcloud.cpp  test.py  test2.py  test2_py2.py  test3.py  testCpp.py  test_lazytheta.cpp  test_planner_pointcloud.cpp  testgate.py  testgate_py2.py  tf2_pointcloud.cpp  tf_pointcloud.cpp
src/camera_controller/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/camera_controller/calibration/: oakd_air.json  oakd_new_air.json  oakd_water.json
src/camera_controller/launch/: oak1_publisher.launch  stereo_nodelet.launch  stereo_nodelet_yolo.launch
src/camera_controller/resources/: YOLO_19.blob  blender_2.blob
src/camera_controller/src/: mobilenet_publisher.cpp  stereo_nodelet.cpp  stereo_nodelet_yolo.cpp
src/color_detection/: CMakeLists.txt  README.md  package.xml
src/color_detection/scripts/: HSV_Isolator.py  OpenCV_Orientation-Detection.py
src/colordetection/: main.py
src/colordetection/marker-orientation/: OpenCV_Orientation-Detection.ipynb  OpenCV_Orientation-Detection.py  README.md
src/controls/: CMakeLists.txt  package.xml
src/controls/launch/: controller.launch  mavlink_publisher.launch  send_viso_pose.launch  send_viso_tf2.launch  send_viso_tf2_irl.launch
src/controls/scripts/: controller.py  mavlink_publisher.py  send_viso_pose.py  send_viso_tf2.py  slam_frame_rectifier.py  test_control.py  test_controller.py  test_pymavlink.py
src/edge-gate-detection/: vertical_gate_edge.py
src/faux_detection/: CMakeLists.txt  README.md  package.xml
src/faux_detection/launch/: faux_detector.launch
src/faux_detection/scripts/: faux_detector.py  faux_subprocess.py  graphdef.py  subprocess_test.ipynb  torchhub.py  yolov5_test.ipynb
src/faux_detection/trained_models/: mobilenet-jul17.pbtxt  mobilenet-jul18.pbtxt  mobilenet-jul23.pbtxt  mobilenet-sep20.pbtxt  prequal.pbtxt  yolov5n-onnx.pbtxt
src/faux_detection/trained_models/mobilenet-july18th/test-2/: model.ckpt.index  pipeline.config
src/faux_detection/trained_models/yolov5-aug1st/: yolov5-aug1st.txt
src/faux_detection/trained_models/yolov5-july15th/: blender_2-best.pt  blender_2-last.pt  blender_2.yaml  opt.yaml  results.csv
src/handle_detection/: handle_orientation.py
src/mission_planning/: CMakeLists.txt  package.xml
src/mission_planning/launch/: mavlink.launch  start_run.launch  start_run_qual.launch  start_run_sim.launch  start_run_sim_qual.launch  viso.launch
src/mission_planning/scripts/: actions_utils  actions_utils.py  calc_utils.py  color_normalization.py  movement_controller.py  progress_tracker.py  search_utils.py  smach_controller.py  smach_controller_qual.py  smach_controller_simulation.py  smach_controller_simulation_qual.py  viso_controller.py  viso_utils.py
src/mission_planning/scripts/states/: bin_analyze.py  buoy.py  buoy_old.py  check_submerged.py  coin_flip.py  detect_gate.py  marker.py  pass_gate.py  pass_gate_color.py  pass_gate_label.py  pass_gate_old.py  pass_gate_old_search.py  pass_gate_qual _simple.py  pass_gate_qual.py  pass_gate_qual_simple.py  pass_gate_simple.py  torpedo.py
src/object detection/script/: main.py
src/pools/: CMakeLists.txt  package.xml
src/pools/launch/: complete_course_flat.launch  pool_v2.launch  pool_v2_heavy.launch  pool_v2_no_middle.launch  test_course.launch  test_pool_v2.launch  test_pool_v2_flat.launch  test_pool_v2_heavy.launch
src/pools/models/complete_props_flat/: complete_props_flat.sdf  model.config
src/pools/models/complete_props_flat/meshes/: complete_props_flat.mtl  complete_props_flat_emission.mtl
src/pools/models/marker/: marker.sdf  model.config
src/pools/models/marker/meshes/: marker.dae
src/pools/models/pool_v2/: model.config  pool_v2.sdf
src/pools/models/pool_v2/meshes/: pool_v2.dae  pool_v2.mtl  pool_v2.stl
src/pools/models/pool_v2_flat/: model.config  pool_v2_flat.sdf
src/pools/models/pool_v2_flat/meshes/: pool_v2_flat.dae  pool_v2_flat.stl
src/pools/models/prequal_gate/: model.config  prequal_gate.sdf
src/pools/models/prequal_gate/meshes/: prequal_gate.dae  prequal_gate.stl
src/pools/models/qual_gate/: model.config  qual_gate.sdf
src/pools/models/qual_gate/meshes/: qual_gate.dae  qual_gate.stl  qual_gate_with_images.dae
src/pools/models/qual_gate_no_middle/: model.config  qual_gate_no_middle.sdf
src/pools/models/qual_gate_no_middle/meshes/: qual_gate_no_middle.dae  qual_gate_no_middle.stl
src/pools/worlds/: complete_course_flat.world  pool_v2.world  pool_v2_marker_test.world  pool_v2_no_middle.world  pool_v2_prequal.world  pool_v2_qual.world
src/smach/: CMakeLists.txt  package.xml
src/smach/launch/: mavlink.launch  start_run.launch  start_run_sim.launch  testrun.launch  viso.launch
src/smach/scripts/: check_submerged.py  coin_flip.py  movement_controller.py  smach_controller.py  smach_controller_simulation.py
src/smach/scripts/states/: check_submerged.py  coin_flip.py  lost.py
src/sonar_ping/: CMakeLists.txt  README.md  package.xml
src/sonar_ping/launch/: fake_hydro.launch  fake_ping.launch
src/sonar_ping/scripts/: fake_hydro.py  fake_ping.py  listener.py  talker.py
src/torpedo-hole/: HoleDetection.py
